--- a/kafka-connect/config/SF_connect.properties
+++ b/kafka-connect/config/SF_connect.properties
@@ -16,7 +16,8 @@ snowflake.topic2table.map= mysql.test_cdc.customers:customers
 
 # Snowpipe Streaming
 # https://docs.snowflake.com/en/user-guide/data-load-snowpipe-streaming-kafka#kafka-configuration-properties
-snowflake.role.name= # テーブルに行を挿入するときに使用するアクセス制御ロール
+# https://docs.snowflake.com/en/user-guide/kafka-connector-install#creating-a-role-to-use-the-kafka-connector
+snowflake.role.name= # テーブルに行を挿入するときに使用するアクセス制御ロール、ロールの作成方法は上記のリンクを参照
 enable.streaming.client.optimization=true # default true
 buffer.flush.time=1 # default 10
 buffer.count.records=2 # default 10000
